Fiz o bean e o dao, e o mapeamento do hibernate, utilizando as instruções no moodle da sala.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\jumik\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=C:\\Users\\u09208193110\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
