coloquei os icones e alterei os que estavam repetidos

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\arthu\\OneDrive\\Documentos\\NetBeansProjects\\SistemaArthurConceicao\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\jumik\\OneDrive\\Documentos\\NetBeansProjects\\SistemaJuliaRogoski(1)\\SistemaJuliaRogoski\\mysql-connector-java-8.0.20.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\jumik\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
